[project]
name = "CoverSnap"
version = "0.0.1"
description = "a convenient Python library for capturing cover images from videos"
authors = [
    {name = "Tohrusky", email = "65994850+Tohrusky@users.noreply.github.com"},
]
dependencies = [
    "opencv-python~=4.8.0.74",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
pytest = [
    "pytest~=7.3.2",
    "pytest-cov~=4.1.0",
]
lint = [
   "pre-commit~=3.3.3"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
coversnap = "coversnap.__main__:main"

[tool.pdm.scripts.test]
cmd = "pytest --cov=src --cov-report=html"
help = "Run tests with coverage"

[tool.pdm.scripts.pre_test]
composite = [
   "pdm install --dev",
   "pdm run lint"
]
help = "pre_test hook: Installs the dev packages, then run linting before running tests"

[tool.pdm.scripts.lint]
cmd = "pre-commit run --all-files"
help = "Check code style against linters using pre-commit"
site_packages = true
